Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- The FCKEditor field now uses the same font shapes and color as the main
  content slot.
Bug fixes:
~~~~~~~~~~
- Clicking to open the popup for photo widgets will not refresh anymore the document page
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Added doc about HOWTO to use a server-side spellchecker with FCKeditor.