@@ -5,6 +5,8 @@ New features:
 ~~~~~~~~~~~~~
 - The FCKEditor field now uses the same font shapes and color as the main
   content slot.
+- GenericSelect and MultiGenericSelect widgets can use a
+  MethodVocabularyWithContext vocabulary.
 Bug fixes:
 ~~~~~~~~~~
 - Clicking to open the popup for photo widgets will not refresh anymore the document page
